testsuite/poke.pkl/div-diag-2.pk
/* { dg-do compile } */

var a = Exception {} /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
        / 32;
